# Jenkins-UT-Analyzer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.claude/: settings.json
.claude/agents/: docs-overview-maintainer.md
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.dev.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml
.venv-ci/: pyvenv.cfg
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  31fdfa8031ac_full_information_model_schema_pg_trgm.py  4f1a2b3c5d6e_add_jira_ticket_to_failure_episodes.py  a1b2c3d4e5f6_add_test_results_identity_run_index.py  a7b8c9d0e1f2_rename_runs_to_builds.py  b8c9d0e1f2a3_rename_build_shards_to_build_tracks.py  c3d4e5f6a7b8_add_control_panel_tables.py  d4e5f6a7b8c9_add_zephyr_test_cases_to_identities.py  e5f6a7b8c9d0_add_poller_resilience.py  f6a7b8c9d0e1_owner_main_developer_vs_zephyr.py
docs/: IMPLEMENTATION-PLAN.md  NEXT-PHASE-REQUIREMENTS.md  OVERVIEW.html  PLAN.md  PROGRESS.md
docs/adr/: 0001-context-md-owns-terminology.md  0002-one-term-track-no-shard.md  0003-permanent-pipeline-not-nightly.md  0004-data-change-attribution-window.md
scripts/: worktree.sh
src/uta/: __init__.py  cli.py  clients.py  config.py  db.py  poller.py  retention.py
tests/: builders.py  conftest.py
tests/fakes/: __init__.py  email.py  jenkins.py  llm.py  oracle.py  svn.py
tests/integration/: test_demo.py  (+1 more)
tracking_tables/: BFLOG.json  BFLOGLINK.json  LORDERTR.json  PATLOG.json  PFLOG.json  RESLOG.json
(+136 files in other folders)
