[project]
name = "uta"
version = "0.0.1"
description = "Jenkins UT Analyzer — ingest, lifecycle, triage of unit-test runs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",  # FastAPI form parsing for the dashboard actions
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "oracledb>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "typer>=0.12",
    "apscheduler>=3.10",
    "anthropic>=0.40",  # LLM hypothesis provider (§4); only used when ANTHROPIC_API_KEY is set
    "openai>=1.40",  # alternate LLM hypothesis provider (§4); only used when OPENAI_API_KEY is set
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff==0.15.20",  # pinned: the lint gate must be identical in CI and locally
]

[project.scripts]
uta = "uta.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"uta.web" = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live' --strict-markers"
markers = [
    "live: requires a gated external system (Jenkins / Oracle / real Postgres) — local only, never in CI",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.coverage.run]
source = ["uta"]
branch = true
